--- a/04. Components (Basic Idea)/react-calculator/src/App.css
+++ b/04. Components (Basic Idea)/react-calculator/src/App.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .App {
   text-align: center;
 }
@@ -34,5 +38,13 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+/* Calculator styles */
+
+@layer components {
+  body {
+    @apply bg-[#219ebc]
   }
 }
